# VideoTransmit

linux/video_transmit/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h  video.cxx  video.h  video.idl  videoCdrAux.hpp  videoCdrAux.ipp  videoPubSubTypes.cxx  videoPubSubTypes.h
linux/video_transmit/Fast-DDS/fastcdr/include/fastcdr/: config.h
linux/video_transmit/Fast-DDS/fastcdr/lib/: libfastcdr.so.2  libfastcdr.so.2.2.5
linux/video_transmit/Fast-DDS/fastcdr/lib/cmake/fastcdr/: fastcdr-config.cmake  fastcdr-shared-targets-release.cmake  fastcdr-shared-targets.cmake
linux/video_transmit/Fast-DDS/fastcdr/share/fastcdr/: package.bash  package.ps1  package.sh  package.zsh
linux/video_transmit/Fast-DDS/fastrtps/include/fastrtps/: config.h
linux/video_transmit/Fast-DDS/fastrtps/lib/: libfastrtps.so.2.14
linux/video_transmit/Fast-DDS/fastrtps/share/fastrtps/: package.sh
linux/video_transmit/Fast-DDS/fastrtps/share/fastrtps/cmake/: fastrtps-config-version.cmake  fastrtps-config.cmake  (+2 more)
linux/video_transmit/opencv/include/opencv2/: cvconfig.h
linux/video_transmit/opencv/lib/: libopencv_calib3d.so.3.4.16  libopencv_features2d.so.3.4.16  libopencv_flann.so.3.4.16  libopencv_highgui.so.3.4.16  libopencv_imgcodecs.so.3.4.16  libopencv_ml.so.3.4.16  libopencv_objdetect.so.3.4.16  libopencv_photo.so.3.4.16  libopencv_shape.so.3.4.16  libopencv_stitching.so.3.4.16  libopencv_superres.so.3.4.16  libopencv_video.so.3.4.16  libopencv_videoio.so.3.4.16  libopencv_videostab.so.3.4.16
linux/video_transmit/opencv/lib/pkgconfig/: opencv.pc
